<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/scan_smartpen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/scan_smartpen"/>
        <item
        android:id="@+id/jiaozhun"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/jiaozhun"/>
        <item
        android:id="@+id/exitjiaozhun"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exitjiaozhun"/>
        <item
        android:id="@+id/refreshinfo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/refreshinfo"/>
        <item
        android:id="@+id/traingesture"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/traingesture"/>
        <item
        android:id="@+id/showpicture"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/showpicture"/>
        、
</menu>